--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/slidingDancer.js"></script>
+    <script src="src/teleportingDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SlidingDancer">add a sliding dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="TeleportingDancer">add a teleporting dancer</a>    </div>
     <script src="src/init.js"></script>
   </body>
+
 </html>
