Made Teleporting Dancer line up for 5sec

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,6 +10,12 @@
     <script src="src/teleportingDancer.js"></script>
   </head>
   <body>
+    <a
+      href="#"
+      class="lineUp"
+    >
+      Line Up!
+    </a>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>    </div>
