--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,8 +15,12 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/slidingDancerSpec.js"></script>
+  <script src="spec/teleportingDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/slidingDancer.js"></script>
+  <script src="src/teleportingDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
