--- a/dancefloor.html
+++ b/dancefloor.html
@@ -3,6 +3,9 @@
   <head>
     <title>Object Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
@@ -10,17 +13,36 @@
     <script src="src/teleportingDancer.js"></script>
   </head>
   <body>
-    <a
-      href="#"
-      class="lineUp"
-    >
-      Line Up!
-    </a>
     <div class="topbar">
+      <a
+        href="#"
+        class="lineUp"
+      >
+        Line Up!
+      </a>
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SlidingDancer">add a sliding dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="TeleportingDancer">add a teleporting dancer</a>    </div>
+      <a
+        href="#"
+        class="addDancerButton"
+        data-dancer-maker-function-name="BlinkyDancer"
+      >
+        add a blinky dancer
+      </a>
+      <a
+        href="#"
+        class="addDancerButton"
+        data-dancer-maker-function-name="SlidingDancer"
+      >
+        add a sliding dancer
+      </a>
+      <a
+        href="#"
+        class="addDancerButton"
+        data-dancer-maker-function-name="TeleportingDancer"
+      >
+        add a teleporting dancer
+      </a>
+    </div> <!-- closes topbar div -->
     <script src="src/init.js"></script>
   </body>
 
